--- a/a1.html
+++ b/a1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunshine Kindergarden </title>
+    <link ref="Stylesheet" href="a1.css">
 </head>
 <body>
     <header>
